# pysocviz

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
dev/: data-transport.R  memo.md
notebooks/: Appendix-plotnine.ipynb  Ch.7.ipynb  appendix.ipynb  ch.2.ipynb  ch.3.ipynb  ch.4.ipynb  ch.5.ipynb  ch.6.ipynb  ch.7.ipynb  ch.8.ipynb
notebooks/jp/: Appendix-plotnine.ipynb  appendix.ipynb  ch.2.ipynb  ch.3.ipynb  ch.4.ipynb  ch.5.ipynb  ch.6.ipynb  ch.7.ipynb  ch.8.ipynb
pysocviz/data/: bad_date.csv  boomer.csv  color_table.csv  county_data.csv  edu.csv  fredts.csv  gss_sib.csv  gss_sm.csv  lawschools.csv  maunaloa.csv  oecd_le.csv  oecd_sum.csv  organdata.csv  preg.csv  preg2.csv  schema.json  titanic.csv  yahoo.csv
pysocviz/loader/: __init__.py  loader.py
pysocviz/misc/: constants.py  innter_utils.py
pysocviz/p9extra/: __init__.py  geom.py  mizani.py  scales.py  themes.py
pysocviz/properties/: __init__.py  properties.py
pysocviz/reader/: __init__.py  reader.py
pysocviz/utils/: __init__.py  utils.py
